fix: align Header container max-width at 1024px from 850px to 960px
Matches Footer, Product Detail, and other page containers.

--- a/website/src/components/Header/Header.module.scss
+++ b/website/src/components/Header/Header.module.scss
@@ -25,7 +25,7 @@
   }
 
   @media (min-width: $bp-lg) {
-    max-width: 850px;
+    max-width: 960px;
   }
 
   @media (min-width: 1200px) {
